# universalAudioPlayer

./: README.md  settings.gradle  不不不  技术要点说明  技术说明.md
app/: build.gradle
app/src/androidTest/java/com/yzg/universalaudioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yzg/universalaudioplayer/: AudioApplication.java  MainActivity.java  TimeUtil.java
app/src/main/java/com/yzg/universalaudioplayer/activity/: MainActivity.java
app/src/main/java/com/yzg/universalaudioplayer/utils/: TimeUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yzg/universalaudioplayer/: ExampleUnitTest.java
audioplayer/: build.gradle
audioplayer/src/androidTest/java/com/yzg/audioplayer/: ExampleInstrumentedTest.java
audioplayer/src/main/: AndroidManifest.xml
audioplayer/src/main/cpp/: Audio .h  CallJava.cpp  CallJava.h  FFmpeg.h  PlayBufferQueue.h  PlayPcmBean.cpp  PlayQueue.cpp  Playstatus.h  native-lib.cpp
audioplayer/src/main/java/com/yzg/audioplayer/: MuteEnum.java  UniversalPlayer.java
audioplayer/src/main/java/com/yzg/audioplayer/listener/: WlOnCompleteListener.java  WlOnLoadListener.java  WlOnParparedListener.java  WlOnRecordTimeListener.java
audioplayerLib/: CMakeLists.txt  build.gradle
audioplayerLib/src/main/: AndroidManifest.xml
audioplayerLib/src/main/cpp/: AndroidLog.h  Audio.cpp  Audio.h  CallJava.cpp  FFmpeg.cpp  FFmpeg.h  PlayBufferQueue.cpp  PlayPcmBean.h  PlayQueue.cpp  PlayerQueue.h  Playstatus.cpp  Playstatus.h  native-lib.cpp
audioplayerLib/src/main/java/com/yzg/audioplayer/: PlayTimeInfoBean.java  UniversalPlayer.java
audioplayerLib/src/main/java/com/yzg/audioplayer/listener/: OnCompleteListener.java  OnErrorListener.java  OnLoadListener.java  OnParparedListener.java  OnPauseResumeListener.java  OnPcmInfoListener.java  OnRecordTimeListener.java  OnTimeInfoListener.java  OnValumeDBListener.java  WlOnErrorListener.java  WlOnPauseResumeListener.java  WlOnPcmInfoListener.java  WlOnTimeInfoListener.java  WlOnValumeDBListener.java
audioplayerLib/src/main/java/com/yzg/audioplayer/log/: PlayerLog.java
audioplayerLib/src/main/java/com/yzg/audioplayer/util/: PlayTimeUtil.java
audioplayerLib/src/main/res/values/: strings.xml
audioplayerLib/src/test/java/com/yzg/audioplayer/: ExampleUnitTest.java
